--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login-Form</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div id="welcome-img">
-            
+            <h1 id="welcome-heading">Welcome<br>Back!</h1>
         </div>
 
         <div id="Form-portion">
