Login Form design

--- a/index.html
+++ b/index.html
@@ -13,7 +13,32 @@
         </div>
 
         <div id="Form-portion">
+            <h1 class="loginContent">Login</h1><br>
+            <h6 class="loginContent2">Welcome back! Please login to your<br>account</h6>
 
+            <div class="form-Div1">
+                <label for="username" class="PlaceHolders">User Name</label><br>
+                <input type="text" class="inputTypes"  placeholder="Enter Your name"><br>
+            </div><br>
+            
+            <div class="form-Div2">
+                <label for="Password" class="PlaceHolders">Password</label><br>
+                <input type="password"  class="inputTypes" placeholder="Enter Password">
+            </div>
+            <div class="form-Div3">
+                <input type="checkbox" id="rememberMe" name="rememberMe" value="remember me">
+                <label for="checkbox" class="PlaceHolders">Remember me</label>
+                <p id="Forgot">Forgot Password?</p>
+            </div>
+
+            <div class="form-Div4">
+                <button type="button"  class="submitType" placeholder="Login">Login</button>
+            </div>
+
+            <div class="form-Div5">
+                <p>New User?</p>
+                <a id="sign">Signup</a>
+            </div>
         </div>
     </div>
 </body>
