--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     
                 <div class="form-Div1">
                     <label for="username" class="PlaceHolders">User Name</label><br>
-                    <input type="text" class="inputTypes"  placeholder="Enter Your name"><br>
+                    <input type="text" class="inputTypes"  placeholder="Username@gmail.com"><br>
                 </div><br>
                 
                 <div class="form-Div2">
                     <label for="Password" class="PlaceHolders">Password</label><br>
-                    <input type="password"  class="inputTypes" placeholder="Enter Password">
+                    <input type="password"  class="inputTypes" placeholder="*****">
                 </div>
                 <div class="form-Div3">
                     <input type="checkbox" id="rememberMe" name="rememberMe" value="remember me">
